<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/item_tiang_provider"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginVertical="6dp"
    android:clickable="true"
    android:focusable="true"
    android:foreground="?android:attr/selectableItemBackground"
    app:cardBackgroundColor="?attr/colorOnSurface"
    app:cardCornerRadius="8dp"
    app:cardUseCompatPadding="true"
    app:elevation="8dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="12dp">

        <TextView
            android:id="@+id/tv_no_provider"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="?attr/colorSurfaceContainer"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/ll_tanggal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:baselineAligned="false"
            android:orientation="vertical"
            app:layout_constraintStart_toEndOf="@+id/tv_no_provider"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/tv_provider"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="16dp"
                android:layout_weight="1"
                android:text="@string/tiang_provider"
                android:textColor="?attr/colorSurfaceContainer"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_utilitas"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:text="@string/tiang_utilitas"
                android:textColor="?attr/colorSurfaceContainer"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_catatan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:text="@string/tiang_catatan"
                android:textColor="?attr/colorSurfaceContainer"
                android:textSize="16sp" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>